# multi-rust-tests

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yml
project_a/: CMakeLists.txt  Cargo.toml  build.rs
project_a/include/: project_a.h
project_a/src/: lib.rs
project_b/: CMakeLists.txt  Cargo.toml  build.rs
project_b/include/: project_b.h
project_b/src/: lib.rs
project_c/: CMakeLists.txt
project_c/src/: main.c
